2010-01-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Nikolas Zimmermann.

        Bad DOM performance in large SVG files
        https://bugs.webkit.org/show_bug.cgi?id=30055

        Add an early return when we go to paint a RenderPath that
        isn't in the current clip.

        * rendering/RenderPath.cpp:
        (WebCore::RenderPath::paint):

2010-01-15  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Antti Koivisto.

        Use OS(MAC_OS_X) instead of PLATFORM(MAC) when determining navigator.platform

        https://bugs.webkit.org/show_bug.cgi?id=33711

        * page/NavigatorBase.cpp:

2010-01-14  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Xan Lopez.

        [Gtk] Compiler warning: comparisons like 'X<=Y<=Z' do not have their mathematical meaning
        https://bugs.webkit.org/show_bug.cgi?id=33575

        Patch from Magnus Boman <captain.magnus@gmail.com>

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache): fix compiler warnings.

2010-01-14  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Timothy Hatcher.

        Add welcome screen to Profiles pane to provide some instructions for novices.

        https://bugs.webkit.org/show_bug.cgi?id=19268

        * English.lproj/localizedStrings.js:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/front-end/ProfileView.js:
        (WebInspector.CPUProfileType.prototype.get welcomeMessage):
        * inspector/front-end/ProfilesPanel.js:
        (WebInspector.ProfileType.prototype.get welcomeMessage):
        (WebInspector.ProfilesPanel):
        (WebInspector.ProfilesPanel.prototype.show):
        (WebInspector.ProfilesPanel.prototype.registerProfileType):
        (WebInspector.ProfilesPanel.prototype._addWelcomeMessage.messageButtonClicked):
        (WebInspector.ProfilesPanel.prototype._addWelcomeMessage):