@@ -1,3 +1,15 @@
+2010-01-15  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        No review, rolling out r53331.
+        http://trac.webkit.org/changeset/53331
+        https://bugs.webkit.org/show_bug.cgi?id=30055
+
+        Broke fast/borders/svg-as-border-image-3.html. Don't give up,
+        Oliver! You are really, really close.
+
+        * rendering/RenderPath.cpp:
+        (WebCore::RenderPath::paint):
+
 2010-01-15  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Nikolas Zimmermann.
